{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 50,
  "lineage": "9b691f95-b758-098d-761f-ea77f283fc3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lokesh_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:193249776570:internet-gateway/igw-0bbabd8c70bd4f874",
            "id": "igw-0bbabd8c70bd4f874",
            "owner_id": "193249776570",
            "vpc_id": "vpc-03dad7f61045a03d3"
          },
          "dependencies": [
            "aws_vpc.lokesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lokesh_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:193249776570:route-table/rtb-08785584e58bd4880",
            "id": "rtb-08785584e58bd4880",
            "owner_id": "193249776570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bbabd8c70bd4f874",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dad7f61045a03d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lokesh_internet_gateway",
            "aws_vpc.lokesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lokesh_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:193249776570:security-group/sg-0ba1df2399f7d58d8",
            "description": "Security group for Elastic Beanstalk environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba1df2399f7d58d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lokesh-security-group-1",
            "name_prefix": "",
            "owner_id": "193249776570",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03dad7f61045a03d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lokesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lokesh_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:193249776570:subnet/subnet-0f48883c67bc09500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f48883c67bc09500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193249776570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03dad7f61045a03d3"
          },
          "dependencies": [
            "aws_vpc.lokesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lokesh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:193249776570:vpc/vpc-03dad7f61045a03d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064cf1875ae6f0c98",
            "default_route_table_id": "rtb-07a898aaf55c0c3d6",
            "default_security_group_id": "sg-00489e15723406da6",
            "dhcp_options_id": "dopt-09affe1158330b9c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dad7f61045a03d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a898aaf55c0c3d6",
            "owner_id": "193249776570"
          }
        }
      ]
    }
  ]
}